
option java_outer_classname="RemoveByTagCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;

message RemoveByTagCommand 
{
	repeated string tags = 1;
	optional int64 requestId = 2;
	optional int32 tagComparisonType = 3;
}