option java_outer_classname="RemoveByTagResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message RemoveByTagResponse {
	
}
